--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -20,21 +20,7 @@
             <field name="context">{"search_default_customer":1}</field>
         </record>
 
-        <!--Action Vehicle Models Menu-->
-        <record model="ir.actions.act_window" id="action_car_vmodels_config">
-            <field name="name">Vehicle Models</field>
-            <field name="res_model">fleet.vehicle.model</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
-        </record>
 
-        <!--Action Vehicle Brand Menu-->
-        <record model="ir.actions.act_window" id="action_car_vbrands_config">
-            <field name="name">Vehicle Brands</field>
-            <field name="res_model">fleet.vehicle.model.brand</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">kanban,form</field>
-        </record>
 
         <!--Action Wheels Menu-->
         <record model="ir.actions.act_window" id="action_car_vwheels_config">
@@ -57,24 +43,22 @@
 
         <!--PRUEBAS-->
 
-        <record model="ir.actions.act_window" id="action_car_pruebas_config">
-            <field name="name">PRUEBAS</field>
-            <field name="res_model">project.task</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">tree,form</field>
-        </record>
+        <!--<record model="ir.actions.act_window" id="action_car_pruebas_config">-->
+            <!--<field name="name">PRUEBAS</field>-->
+            <!--<field name="res_model">project.task</field>-->
+            <!--<field name="view_type">form</field>-->
+            <!--<field name="view_mode">tree,form</field>-->
+        <!--</record>-->
 
-        <menuitem id="car_pruebas_menu" name="Pruebas"
-                  parent="main_car_workshop_menu"
-                  sequence="3" action="action_car_pruebas_config"/>
+        <!--<menuitem id="car_pruebas_menu" name="Pruebas"-->
+                  <!--parent="main_car_workshop_menu"-->
+                  <!--sequence="3" action="action_car_pruebas_config"/>-->
 
         <!--FIN PRUEBAS-->
 
 
         <!--Main Menu-->
-        <menuitem id="main_car_workshop_menu" name="Car Workshop"
-                  web_icon="car-workshop,static/description/icon.png"
-                  sequence="1" action="action_car_areas_menu"/>
+        <menuitem id="main_car_workshop_menu" name="Car Workshop" sequence="1"/>
 
         <!--Account Invoice Menu-->
         <menuitem id="car_account_invoice_menu" name="Account Invoice"
@@ -97,15 +81,7 @@
                   parent="main_car_workshop_menu"
                   sequence="5"/>
 
-        <!--Vehicle Models Menu-->
-        <menuitem id="car_vmodels_menu" name="Models"
-                  parent="car_vconfig_menus"
-                  sequence="1" action="action_car_vmodels_config"/>
 
-        <!--Vehicle Brand Menu-->
-        <menuitem id="car_vbrands_menu" name="Brands"
-                  parent="car_vconfig_menus"
-                  sequence="2" action="action_car_vbrands_config"/>
 
         <!--Wheels Menu-->
         <menuitem id="car_wheels_menu" name="Wheels"
