--- a/car-workshop/views/inherit_project_task.xml
+++ b/car-workshop/views/inherit_project_task.xml
@@ -60,8 +60,8 @@
                         </div>
                         <group>
                             <group>
-                                <!--<field name="project_task_id"/>-->
-                                <!--<field name="sale_order_id"/>-->
+                                <field name="project_task_id"/>
+                                <field name="sale_order_id"/>
                                 <field name="project_id" domain="[('active', '=', True)]" required="True"/>
                                 <field name="user_id" class="o_task_user_field" options="{&quot;no_open&quot;: True}"/>
                                 <field name="vehicle_id" required="True"/><!--nuevo-->
@@ -371,139 +371,20 @@
             </field>
         </record>
 
-        <!-- Project Task Kanban View -->
-        <!--<record model="ir.ui.view" id="car-workshop_task_view_kanban">-->
-        <!--<field name="name">car-workshop.repair.kanban</field>-->
-        <!--<field name="model">project.task</field>-->
-        <!--<field name="priority">30</field>-->
-        <!--<field name="mode">primary</field>-->
-        <!--<field name="arch" type="xml">-->
-        <!--<kanban default_group_by="stage_id" class="o_kanban_small_column o_kanban_project_tasks" on_create="quick_create">-->
-        <!--<field name="color"/>-->
-        <!--<field name="priority"/>-->
-        <!--<field name="stage_id" options='{"group_by_tooltip": {"description": "Stage Description", "legend_priority": "Use of stars"}}'/>-->
-        <!--<field name="user_id"/>-->
-        <!--<field name="user_email"/>-->
-        <!--<field name="description"/>-->
-        <!--<field name="sequence"/>-->
-        <!--<field name="remaining_hours" groups="project.group_time_work_estimation_tasks"/>-->
-        <!--<field name="date_deadline"/>-->
-        <!--<field name="message_needaction_counter"/>-->
-        <!--<field name="attachment_ids"/>-->
-        <!--<field name="displayed_image_id"/>-->
-        <!--<field name="active"/>-->
-        <!--<field name="legend_blocked"/>-->
-        <!--<field name="legend_normal"/>-->
-        <!--<field name="legend_done"/>-->
-        <!--<field name="activity_ids"/>-->
-        <!--<field name="activity_state"/>-->
-        <!--<field name="image_client_vehicle"/>-->
-        <!--<progressbar field="kanban_state" colors='{"done": "success", "blocked": "danger"}'/>-->
-        <!--<templates>-->
-        <!--<t t-name="kanban-box">-->
-        <!--<div t-attf-class="oe_kanban_color_#{kanban_getcolor(record.color.raw_value)} oe_kanban_card oe_kanban_global_click">-->
-        <!--<div class="oe_kanban_content">-->
-        <!--<div class="o_kanban_record_top">-->
-        <!--<div class="o_kanban_record_headings">-->
-        <!--<strong class="o_kanban_record_title"><field name="name"/></strong><br/>-->
-        <!--<small class="o_kanban_record_subtitle text-muted">-->
-        <!--<field name="project_id" invisible="context.get('default_project_id', False)"/>-->
-        <!--<t t-if="record.date_deadline.raw_value and record.date_deadline.raw_value lt (new Date())" t-set="red">oe_kanban_text_red</t>-->
-        <!--<span t-attf-class="#{red || ''}"><i><field name="date_deadline"/></i></span>-->
-        <!--<t t-if="record.email_from.raw_value"><span><field name="email_from"/></span></t>-->
-        <!--</small>-->
-        <!--</div>-->
-        <!--<div class="o_dropdown_kanban dropdown" groups="base.group_user">-->
-        <!--<a class="dropdown-toggle btn" data-toggle="dropdown" href="#" >-->
-        <!--<span class="fa fa-ellipsis-v" aria-hidden="true"/>-->
-        <!--</a>-->
-        <!--<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">-->
-        <!--<li t-if="widget.editable"><a type="set_cover">Set Cover Image</a></li>-->
-        <!--<li t-if="widget.editable"><a type="edit">Edit Task</a></li>-->
-        <!--<li t-if="widget.deletable"><a type="delete">Delete</a></li>-->
-        <!--<li class="divider"></li>-->
-        <!--<li class="dropdown-header">Record's Colour</li>-->
-        <!--<li>-->
-        <!--<ul class="oe_kanban_colorpicker" data-field="color"/>-->
-        <!--</li>-->
-        <!--</ul>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--<div class="o_kanban_record_body">-->
-        <!--<field name="tag_ids" widget="many2many_tags" options="{'color_field': 'color'}"/>-->
-        <!--<div t-if="record.displayed_image_id.value">-->
-        <!--<field name="displayed_image_id" widget="attachment_image"/>-->
-        <!--</div>-->
-        <!--<img t-att-src="kanban_image('project.repair', 'image_client_vehicle', record.id)" t-att-title="record.name" width="140"/>-->
-        <!--</div>-->
-        <!--<div class="o_kanban_record_bottom">-->
-        <!--<div class="oe_kanban_bottom_left">-->
-        <!--<field name="priority" widget="priority"/>-->
-        <!--<field name="activity_ids" widget="kanban_activity"/>-->
-        <!--<t t-if="record.message_needaction_counter.raw_value">-->
-        <!--<span class='oe_kanban_mail_new' title='Unread Messages'><i class='fa fa-comments'/><t t-raw="record.message_needaction_counter.raw_value"/></span>-->
-        <!--</t>-->
-        <!--</div>-->
-        <!--<div class="oe_kanban_bottom_right">-->
-        <!--<field name="kanban_state" widget="state_selection" groups="base.group_user"/>-->
-        <!--<img t-att-src="kanban_image('res.users', 'image_small', record.user_id.raw_value)" t-att-title="record.user_id.value" width="24" height="24" class="oe_kanban_avatar"/>-->
-        <!--</div>-->
-
-        <!--</div>-->
-        <!--</div>-->
-        <!--<div class="oe_clear"></div>-->
-        <!--</div>-->
-        <!--</t>-->
-        <!--</templates>-->
-        <!--</kanban>-->
-        <!--</field>-->
-        <!--</record>-->
-
 
         <!--###############################-->
-        <!-- Project Task Calendar View -->
-        <!--<record id="car-workshop_task_view_calendar" model="ir.ui.view">-->
-        <!--<field name="name">car-workshop.task.calendar</field>-->
-        <!--<field name="model">project.task</field>-->
-        <!--<field name="priority">30</field>-->
-        <!--<field name="mode">primary</field>-->
-        <!--<field name="arch" type="xml">-->
-        <!--<calendar string="Tasks" date_start="date_start" date_delay="planned_hours" color="partner_id">-->
-        <!--<field name="name"/>-->
-        <!--</calendar>-->
-        <!--</field>-->
-        <!--</record>-->
-        <!--###############################-->
-
-
-        <!--###############################-->
-        <!-- Product Line Kanban View -->
-        <!--<record id="car-workshop_product_line_view_kanban" model="ir.ui.view">-->
-        <!--<field name="name">car-workshop.task.product.line.kanban</field>-->
-        <!--<field name="model">project.task.product.line</field>-->
-        <!--<field name="arch" type="xml">-->
-        <!--<kanban class="o_kanban_mobile">-->
-        <!--<field name="product_id" />-->
-        <!--<field name="product_uom_qty"/>-->
-        <!--<field name="price_unit"/>-->
-        <!--<field name="price_total"/>-->
-        <!--<templates>-->
-        <!--<t t-name="kanban-box">-->
-        <!--<div t-attf-class="oe_kanban_card oe_kanban_global_click">-->
-        <!--<div class="row">-->
-        <!--<div class="col-xs-12">-->
-        <!--<field name="product_id" />-->
-        <!--<field name="product_uom_qty" options="{'input_type': 'number'}"/>-->
-        <!--<field name="price_unit" options="{'input_type': 'number'}"/>-->
-        <!--<strong><field name="price_total" widget="monetary" readonly="1"/></strong>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</div>-->
-        <!--</t>-->
-        <!--</templates>-->
-        <!--</kanban>-->
-        <!--</field>-->
-        <!--</record>-->
+         <!--Project Task Calendar View -->
+        <record id="car-workshop_task_view_calendar" model="ir.ui.view">
+        <field name="name">car-workshop.task.calendar</field>
+        <field name="model">car_workshop.repair</field>
+        <field name="priority">30</field>
+        <field name="mode">primary</field>
+        <field name="arch" type="xml">
+        <calendar string="Tasks" date_start="date_start" date_delay="planned_hours" color="partner_id">
+        <field name="name"/>
+        </calendar>
+        </field>
+        </record>
         <!--###############################-->
 
 
