--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -23,14 +23,14 @@
 
 
         <!--Action Wheels Menu-->
-        <record model="ir.actions.act_window" id="action_car_vwheels_config">
-            <field name="name">Products</field>
-            <field name="res_model">product.product</field>
-            <field name="view_type">form</field>
-            <field name="view_mode">kanban,form</field>
-            <!--DONDE el campo es_rueda = True-->
-            <!--<field name="context">{"is_wheel":1}</field>-->
-        </record>
+        <!--<record model="ir.actions.act_window" id="action_car_vwheels_config">-->
+            <!--<field name="name">Wheels</field>-->
+            <!--<field name="res_model">car_workshop.wheels_wizardd</field>-->
+            <!--<field name="view_type">form</field>-->
+            <!--<field name="view_mode">form</field>-->
+            <!--&lt;!&ndash;DONDE el campo es_rueda = True&ndash;&gt;-->
+            <!--&lt;!&ndash;<field name="context">{"is_wheel":1}</field>&ndash;&gt;-->
+        <!--</record>-->
 
         <!--Action Products Menu-->
         <record model="ir.actions.act_window" id="action_car_vproducts_config">
@@ -86,7 +86,7 @@
         <!--Wheels Menu-->
         <menuitem id="car_wheels_menu" name="Wheels"
                   parent="car_vconfig_menus"
-                  sequence="3" action="action_car_vwheels_config"/>
+                  sequence="3" action="action_wheels_view_wizard"/>
 
         <!--Products Menu-->
         <menuitem id="car_vproducts_menu" name="Products"
