--- a/car-workshop/views/car-workshop.xml
+++ b/car-workshop/views/car-workshop.xml
@@ -2,7 +2,6 @@
 <odoo>
     <data>
 
-
         <!--Action Account Invoice Menu-->
         <record model="ir.actions.act_window" id="action_car_account_invoice_config">
             <field name="name">Account Invoice</field>
@@ -19,18 +18,6 @@
             <field name="view_mode">kanban,form</field>
             <field name="context">{"search_default_customer":1}</field>
         </record>
-
-
-
-        <!--Action Wheels Menu-->
-        <!--<record model="ir.actions.act_window" id="action_car_vwheels_config">-->
-            <!--<field name="name">Wheels</field>-->
-            <!--<field name="res_model">car_workshop.wheels_wizardd</field>-->
-            <!--<field name="view_type">form</field>-->
-            <!--<field name="view_mode">form</field>-->
-            <!--&lt;!&ndash;DONDE el campo es_rueda = True&ndash;&gt;-->
-            <!--&lt;!&ndash;<field name="context">{"is_wheel":1}</field>&ndash;&gt;-->
-        <!--</record>-->
 
         <!--Action Products Menu-->
         <record model="ir.actions.act_window" id="action_car_vproducts_config">
@@ -53,7 +40,6 @@
         <!--<menuitem id="car_pruebas_menu" name="Pruebas"-->
                   <!--parent="main_car_workshop_menu"-->
                   <!--sequence="3" action="action_car_pruebas_config"/>-->
-
         <!--FIN PRUEBAS-->
 
 
@@ -75,23 +61,21 @@
                   parent="car_customers_menus"
                   sequence="1" action="action_car_customers_config"/>
 
-
         <!--Vehicle Configuration Menus-->
-        <menuitem id="car_vconfig_menus" name="Configuration"
+        <menuitem id="car_products_menus" name="Products"
                   parent="main_car_workshop_menu"
                   sequence="5"/>
 
 
-
-        <!--Wheels Menu-->
-        <menuitem id="car_wheels_menu" name="Wheels"
-                  parent="car_vconfig_menus"
-                  sequence="3" action="action_wheels_view_wizard"/>
-
         <!--Products Menu-->
         <menuitem id="car_vproducts_menu" name="Products"
-                  parent="car_vconfig_menus"
+                  parent="car_products_menus"
                   sequence="4" action="action_car_vproducts_config"/>
 
+
+        <!--Vehicle Configuration Menus-->
+        <menuitem id="car_vconfig_menus" name="Configuration"
+                  parent="main_car_workshop_menu"
+                  sequence="6"/>
     </data>
 </odoo>
