[FIX]repair menu, but with dobuts, more in repair.py

--- a/car-workshop/views/car-workshop_repair.xml
+++ b/car-workshop/views/car-workshop_repair.xml
@@ -52,9 +52,11 @@
                                 <field name="partner_id" domain="[('customer','=',True)]"
                                        context="{'search_default_customer':1, 'show_address': 1}"
                                        options="{&quot;always_reload&quot;: True}"/>
-                                <!--<field name="partner_invoice_id" groups="sale.group_delivery_invoice_address"-->
-                                <!--context="{'default_type':'invoice'}"-->
-                                <!--options="{&quot;always_reload&quot;: True}"/>-->
+                                <field name="partner_invoice_id"
+                                context="{'default_type':'invoice'}"
+                                options="{&quot;always_reload&quot;: True}"/>
+                                <!--groups="sale.group_delivery_invoice_address"-->
+
                                 <!--<field name="partner_shipping_id" groups="sale.group_delivery_invoice_address"-->
                                 <!--context="{'default_type':'delivery'}"-->
                                 <!--options="{&quot;always_reload&quot;: True}"/>-->
@@ -70,7 +72,8 @@
                                 <field name="validity_date" attrs="{'invisible': [('state', 'in', ['sale', 'done'])]}"/>
                                 <field name="confirmation_date"
                                        attrs="{'invisible': [('state', 'in', ['draft', 'sent', 'cancel'])]}"/>
-                                <!--<field name="pricelist_id" groups="product.group_sale_pricelist"/>-->
+                                <field name="pricelist_id"/>
+                                 <!--groups="product.group_sale_pricelist"-->
                                 <!--<field name="currency_id" invisible="1"/>-->
                                 <field name="payment_term_id" options="{'no_create': True}"/>
                             </group>
