--- a/car-workshop/views/inherit_fleet_vehicle.xml
+++ b/car-workshop/views/inherit_fleet_vehicle.xml
@@ -6,6 +6,7 @@
         <record id='car-workshop_fleet_vehicle_view_form' model='ir.ui.view'>
             <field name="name">fleet.vehicle.form</field>
             <field name="model">fleet.vehicle</field>
+            <field name="priority">40</field>
             <field name="arch" type="xml">
                 <form string="Vehicle">
                 <sheet>
@@ -142,7 +143,7 @@
             <field name="form_view_id" ref="car-workshop_fleet_vehicle_view_form"/>
             <field name="kanban_view_id" ref="car-workshop_fleet_vehicle_view_kanban"/>
             <field name="view_type">form</field>
-            <field name="view_mode">kanban,form</field>
+            <field name="view_mode">kanban,tree,form</field>
         </record>
 
         <!--Vehicles Menu-->
